--- a/SWEET/Views/Shared/_Layout.cshtml
+++ b/SWEET/Views/Shared/_Layout.cshtml
@@ -25,6 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Institution" asp-action="Index">Institution</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="Index">Rooms</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Asset" asp-action="Index">Assets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GeneralIssue" asp-action="Index">General Issues</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MaintenanceIssue" asp-action="Index">Maintenance Issues</a>
+                        </li>
+
 
                     </ul>
                     <partial name="_LoginPartial" />
