--- a/SWEET/Views/Shared/_LoginPartial.cshtml
+++ b/SWEET/Views/Shared/_LoginPartial.cshtml
@@ -5,8 +5,16 @@
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
+    
     {
-        @if (User.IsInRole("Staff"))
+        @if (User.IsInRole("Manager"))
+            {
+
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Institution" asp-action="Index">Institution</a>
+                </li>
+            }
+             @if (User.IsInRole("Staff"))
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -20,16 +28,10 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="MaintenanceIssue" asp-action="Index">Maintenance Issues</a>
             </li>
+           
 
-            @if (User.IsInRole("Manager"))
-            {
-
-                <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Institution" asp-action="Index">Institution</a>
-                </li>
-            }
-
-            @if (User.IsInRole("Admin"))
+        }
+        @if (User.IsInRole("Admin"))
             {
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="Index">Rooms</a>
@@ -37,9 +39,13 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="UserRoles" asp-action="Index">User Roles</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
+                </li>
             }
-
-        }
+             
+       
+        
 
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
